[gd_scene format=3 uid="uid://dluta4slmbyu4"]

[ext_resource type="Script" uid="uid://ddvor7cq2bxd6" path="res://scripts/title.gd" id="1_8pw88"]
[ext_resource type="Texture2D" uid="uid://bckr6kg8s8hkq" path="res://assets/sprites/groundbreaking_black.png" id="1_oxt76"]
[ext_resource type="Texture2D" uid="uid://cpa6sosvu7ri4" path="res://assets/sprites/groundbreaking.png" id="3_k00jo"]
[ext_resource type="Texture2D" uid="uid://bwtsy54h34awp" path="res://assets/sprites/crack_black.png" id="3_od2a6"]
[ext_resource type="Texture2D" uid="uid://bje02kvbq5rqr" path="res://assets/sprites/crack.png" id="5_rhd5f"]
[ext_resource type="Texture2D" uid="uid://cswjft7tldrdm" path="res://assets/sprites/just_white.png" id="6_rt25g"]
[ext_resource type="Texture2D" uid="uid://ckogen5o7yqk2" path="res://assets/sprites/just_black.png" id="7_dqea6"]
[ext_resource type="AudioStream" uid="uid://bd21mjkmpa4dl" path="res://assets/audio/punch-a-rock-edited.mp3" id="8_ubwg4"]
[ext_resource type="AudioStream" uid="uid://b6gjeulk74jmn" path="res://assets/audio/glass-bottle-smash-229205.mp3" id="9_8rvb2"]

[sub_resource type="Curve2D" id="Curve2D_yim72"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 576, -100, 0, 0, 0, 0, 576, 324)
}
point_count = 2

[sub_resource type="Animation" id="Animation_0qxdi"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Path2D/PathFollow2D:progress_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_piylu"]
resource_name = "title"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Path2D/PathFollow2D:progress_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bscfx"]
_data = {
&"RESET": SubResource("Animation_0qxdi"),
&"title": SubResource("Animation_piylu")
}

[node name="Title" type="Control" unique_id=921456933]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8pw88")

[node name="background" type="Sprite2D" parent="." unique_id=143160667]
position = Vector2(576, 324)
scale = Vector2(50, 50)
texture = ExtResource("6_rt25g")

[node name="alt_background" type="Sprite2D" parent="." unique_id=1936128390]
visible = false
position = Vector2(576, 324)
scale = Vector2(50, 50)
texture = ExtResource("7_dqea6")

[node name="Path2D" type="Path2D" parent="." unique_id=1493083185]
curve = SubResource("Curve2D_yim72")

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D" unique_id=779407778]
position = Vector2(576, -100)
rotates = false

[node name="name" type="Sprite2D" parent="Path2D/PathFollow2D" unique_id=112529596]
scale = Vector2(3, 3)
texture = ExtResource("1_oxt76")

[node name="alt_name" type="Sprite2D" parent="Path2D/PathFollow2D" unique_id=716654050]
visible = false
scale = Vector2(3, 3)
texture = ExtResource("3_k00jo")

[node name="crack" type="Sprite2D" parent="." unique_id=1596866404]
visible = false
position = Vector2(555, 420)
scale = Vector2(3, 3)
texture = ExtResource("3_od2a6")

[node name="alt_crack" type="Sprite2D" parent="." unique_id=2128078712]
visible = false
position = Vector2(555, 420)
scale = Vector2(3, 3)
texture = ExtResource("5_rhd5f")

[node name="AnimationPlayer" type="AnimationPlayer" parent="." unique_id=2056267615]
libraries/ = SubResource("AnimationLibrary_bscfx")
speed_scale = 2.0

[node name="Timer" type="Timer" parent="." unique_id=1859221046]
wait_time = 2.0
one_shot = true

[node name="Timer2" type="Timer" parent="." unique_id=1276633014]
wait_time = 2.0
one_shot = true

[node name="punch_a_rock" type="AudioStreamPlayer2D" parent="." unique_id=1638257074]
stream = ExtResource("8_ubwg4")
volume_db = -20.0

[node name="glass_bottle_smash" type="AudioStreamPlayer2D" parent="." unique_id=566482000]
stream = ExtResource("9_8rvb2")
volume_db = -20.0

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
[connection signal="finished" from="glass_bottle_smash" to="." method="_on_glass_bottle_smash_finished"]
